@@ -24,7 +24,6 @@ Test::Warnings = 0
 Test::Perl::Critic = 0
 
 [Prereqs / RuntimeRequires]
-Test::Kwalitee = 1.12
 Dist::Zilla::Plugin::MetaResources = 4.300039 ; strict validation of license arrayref
 
 ;[PerlTidy]
